test/regress/cov6-amount-parse-bad-apostrophe.test
; Test parse error for incorrect apostrophe thousands separator
; Covers amount.cc

2024/01/01 Test
    Expenses:Food    12'34.56 USD
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 5:
While parsing posting:
  Expenses:Food    12'34.56 USD
                   ^^^^^^^^^^^^
Error: Incorrect use of thousand-mark apostrophe
end test
